--- a/app/views/productos/new.html.erb
+++ b/app/views/productos/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Producto</h1>
+<div class="formulario">
+	
+	<h2>Registrar Producto</h2>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', productos_path %>
+	<%= link_to 'Back', productos_path %>
+
+</div>
