--- a/app/views/departamentos/new.html.erb
+++ b/app/views/departamentos/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Departamento</h1>
+<div class="formulario">
+<h2>Crear Departamento</h2>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', departamentos_path %>
+
+</div>
