--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Inicio#index</h1>
-<p>Find me in app/views/inicio/index.html.erb</p>
+<% if usuario_signed_in? 
+	 @nombre = current_usuario.email.split(/@/)[0]	
+	else
+		@nombre = "Usuario"
+	end
+ %>
+
+<h1>Bienvenido <%= "#{@nombre}" %></h1>
+
