--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
 <%= render '/partials/nav' %>
+<div class="content-principal">
 	<p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-
-
-
-<%= yield %>
-
+	<%= yield %>
+</div>
 </body>
 </html>
