--- a/app/views/productos/_form.html.erb
+++ b/app/views/productos/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_for(@producto) do |f| %>
 <% if @producto.errors.any? %>
 <div id="error_explanation">
@@ -35,19 +36,20 @@
 
 
 
-<div class="field">
-<%@departamentos.each do |departamento| %>
-<p>  <%= departamento.nombre %></p>
-  <% departamento.id = departamento.id.to_i %>
-<%= f.radio_button(:departamento_id,departamento.id) %>
+<div class="field-c">
+<h4>A que departamento pertenece</h4>
+  <%@departamentos.each do |departamento| %>
+  <p class="categorias">  <%= departamento.nombre %></p>
+  
+  <%= f.radio_button(:departamento_id,departamento.id) %>
 
 
   <% end %>
-  </div>
+</div>
 
 
 
 <div class="actions">
-  <%= f.submit %>
+  <%= f.submit  "Publicar" %>
 </div>
 <% end %>
