--- a/app/views/productos/edit.html.erb
+++ b/app/views/productos/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing Producto</h1>
+<div class="formulario">
+	<h1>Editing Producto</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @producto %> |
-<%= link_to 'Back', productos_path %>
+	<%= link_to 'Show', @producto %> |
+	<%= link_to 'Back', productos_path %>
+
+</div>
