cancelado nested resources

--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -4,7 +4,7 @@
 		<li class="boton"><i class="fa fa-menu"></i>menu</li>		
 		<ul>
 			<li><%= link_to "Compras Facilito", root_path , class:"logo home-a" %></li>
-			<li ><%= link_to "Vender",new_producto_path %></li>
+			<li ><%= link_to "Vender",departamentos_path %></li>
 			<li><%= link_to "Departamentos", departamentos_path, class:"departamentos-a" %></li>
 
 
