Imagenes para productos y para Departementos

--- a/app/views/departamentos/_form.html.erb
+++ b/app/views/departamentos/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :descripcion %>
     <%= f.text_area :descripcion %>
   </div>
+  <div class="field">
+  <%= f.label :imagen %>
+  <%= f.file_field :imagen %>
+</div>
   <div class="actions">
     <%= f.submit "Crear Departamento" %>
   </div>
