--- a/app/views/productos/_form.html.erb
+++ b/app/views/productos/_form.html.erb
@@ -33,6 +33,10 @@
   <%=  f.label :precio%>
   <%=  f.text_field :precio%>
 </div>
+<div class="field">
+  <%= f.label :imagen %>
+  <%= f.file_field :imagen %>
+</div>
 
 
 
