--- a/app/views/productos/show.html.erb
+++ b/app/views/productos/show.html.erb
@@ -5,4 +5,5 @@
 <p><%= @producto.desc_l %></p>
 <p><%= @producto.estado %></p>
 <p>Q<%= @producto.precio %></p>
+<%= image_tag @producto.imagen.url(:pequena) %>
 
