--- a/app/assets/stylesheets/mi.css
+++ b/app/assets/stylesheets/mi.css
@@ -1,10 +1,12 @@
 body{
 	margin:0px 0px 0px 0px;
+	font-family: 'Roboto Condensed', sans-serif;
 
 }
 /*navegacion*/
 .logo{
 	font-weight: bold;
+	color:#00C3B6;
 
 }
 a{
@@ -12,7 +14,7 @@ a{
 }
 nav{
 	width: 100%;
-	font-family: arial;
+	font-weight: 300;
 
 }
 ul{
