--- a/app/views/departamentos/show.html.erb
+++ b/app/views/departamentos/show.html.erb
@@ -25,7 +25,11 @@
 		.show-dep{
 			background-image:  url('<%= @departamento.imagen.url(:grande) %>');
 			height: 315px;
+
 		}	
+		h3{
+			font-size: 25px;
+		}
 
 		@media (max-width: 780px){
 			.show-dep{
