--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+ <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,300italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
