--- a/app/assets/stylesheets/mi.css
+++ b/app/assets/stylesheets/mi.css
@@ -3,6 +3,12 @@ body{
 	font-family: 'Roboto Condensed', sans-serif;
 
 }
+h1,h2,h3,h4,h5{
+	font-weight: 400;
+}
+p{
+	font-weight: 300;
+}
 /*navegacion*/
 .logo{
 	font-weight: bold;
@@ -12,6 +18,7 @@ body{
 a{
 	text-decoration: none;
 }
+
 nav{
 	width: 100%;
 	font-weight: 300;
@@ -89,12 +96,12 @@ nav a:hover{
 	ul a{
 		color: #FFFDF5
 	}
-		.content-principal{
-			margin-top: 25px;
-			position: relative;
-		}
-
+	.content-principal{
+		margin-top: 25px;
+		position: relative;
 	}
+
+}
 /*
 azul #113A52
 celest1 #00C3B6
@@ -118,33 +125,7 @@ negro #404040
 
 }
 /*Formularios*/
-.field{
-	display: block;
-}
-.field label, .field input ,textarea{
-	display: block;
-	margin-top: 10px;
-}
-.field label{
-	
-}
 
-.field input{
-	width: 100%;
-	height: 25px;
-
-}
-.field input:focus, .field textarea:focus{
-	border: solid 3px #00C3B6;
-}
-.field textarea{
-	width: 100%;
-	height: 100px;
-}
-.formulario{
-	width: 50%;
-	margin-left: 25%;
-}
 .field-c {
 	display: block;
 }
@@ -240,6 +221,10 @@ negro #404040
 	width: 100%;
 	display: flex;
 	flex-wrap:wrap;
+	-moz-flex-wrap:wrap;
+	-webkit-flex-wrap:wrap;
+	-moz-justify-content:space-between;
+	-webkit-justify-content:space-between;
 	justify-content:space-between;
 }
 .dashboard-e{
@@ -279,3 +264,103 @@ negro #404040
 .borde-minimo{
 	border-radius: 2%;
 }
+
+
+/*Vistas devise usuarios*/
+.shared-link{
+	color: white;	
+	margin-top: 10px;
+	background: #00C3B6;
+	padding: 10px;
+	text-align: center;
+	display: block;
+}
+.formularios, .cuenta{
+	border-left: 1px solid silver;
+	border-right: 1px solid silver;
+	border-radius: 5px;
+	padding: 1%;
+	text-align: center;
+}
+.formularios{
+	width: 58%;
+	margin-left: 20%;
+}
+.formularios .field{
+	padding: 15px;
+	text-align: center;
+	font-size: 18px;
+	font-weight: 300;
+}
+label[for="usuario_remember_me"],label[for="usuario_sexo"]{
+	display: inline-block;
+}
+label{
+	display: block;
+}
+input,textarea{
+	margin-left: auto !important;
+	margin-right: auto !important;
+}
+.cuenta{
+	width: 78%;
+	margin-left: 5%;
+	background: #EAEAEA;
+	text-align: left;
+	position: absolute;
+}
+.contenedor{
+	margin-top: 25px;
+	display: flex;
+	flex-wrap:wrap;
+	-moz-flex-wrap:wrap;
+	-webkit-flex-wrap:wrap;
+	-moz-justify-content:space-between;
+	-webkit-justify-content:space-between;
+	justify-content:space-between;
+
+}
+.img-perfil{
+	max-width: 45%;
+	display: inline-block;
+	box-shadow: 0px 2px 5px gray;
+	flex: auto;
+}
+.img-perfil img{
+	width: 100%;
+	height: 100%;
+}
+.objetos{
+	margin-left: 5px;
+	width: 45%;
+	flex: auto;
+	display: flex;
+	flex-wrap:wrap;
+	-moz-flex-wrap:wrap;
+	-webkit-flex-wrap:wrap;
+	-moz-justify-content:space-between;
+	-webkit-justify-content:space-between;
+	justify-content:space-between;
+
+
+}
+.campo h3,.campo p{
+	display: block;
+	position: relative;
+}
+.campo p{
+	left:10%;
+	font-weight: 300;
+	text-decoration: left;
+}
+.campo{
+	width: 98%;
+	flex:auto;
+	border-bottom: dashed 1px silver;
+	padding-left: 5px;
+	background: #FAFAFA;
+}
+
+
+
+
