--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="icon" href="favicon.png" type="image/png" sizes="16x16"> 
  <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,300italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
