--- a/app/views/usuarios/registrations/new.html.erb
+++ b/app/views/usuarios/registrations/new.html.erb
@@ -1,33 +1,34 @@
-<h2>Sign up</h2>
+<div class="formularios">
+  <h2>Registrarme</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
    <div class="field">
-    <%= f.label :user_name ,"Nombre de Usuario"%><br />
-    <%= f.text_field :user_name%>
+    <%= f.label :user_name ,"Nombre de Usuario"%>
+    <%= f.text_field :user_name, autofocus: true, placeholder:"'Pedro' , 'Pablo' , etc.." %>
   </div>
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.label :email %>
+    <%= f.email_field :email, placeholder:"correo@example.com"%>
+  </div>
+  
+
+  <div class="field">
+    <%= f.label :password,  "Contraseña (8 caracteres minimo)" %>
+    <%= f.password_field :password, autocomplete: "off", placeholder:"Contraseña" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.label :password_confirmation, "Confirmar Contraseña" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", placeholder:"Confirmar Contraseña" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Registrarme" %>
   </div>
 <% end %>
 
-<%= render "usuarios/shared/links" %>
+<%=  render "usuarios/shared/links" %>
+
+</div>
