--- a/app/views/usuarios/shared/_links.html.erb
+++ b/app/views/usuarios/shared/_links.html.erb
@@ -7,7 +7,7 @@
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Olvidaste tu contraseña?", new_password_path(resource_name), class:"shared-link" %>
+  <%= link_to "Olvide mi contraseña!", new_password_path(resource_name), class:"shared-link" %>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
