--- a/app/views/usuarios/registrations/new.html.erb
+++ b/app/views/usuarios/registrations/new.html.erb
@@ -7,21 +7,25 @@
    <div class="field">
     <%= f.label :user_name ,"Nombre de Usuario"%>
     <%= f.text_field :user_name, autofocus: true, placeholder:"'Pedro' , 'Pablo' , etc.." ,class:"input"%>
+    <i class="fa fa-user"></i>
   </div>
   <div class="field">
     <%= f.label :email %>
     <%= f.email_field :email, placeholder:"correo@example.com",class:"input"%>
+    <i class="fa fa-envelope"></i>
   </div>
   
 
   <div class="field">
     <%= f.label :password,  "Contraseña (8 caracteres minimo)" %>
     <%= f.password_field :password, autocomplete: "off", placeholder:"Contraseña" ,class:"input"%>
+    <i class="fa fa-unlock"></i>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation, "Confirmar Contraseña" %>
     <%= f.password_field :password_confirmation, autocomplete: "off", placeholder:"Confirmar Contraseña" ,class:"input"%>
+    <i class="fa fa-unlock-alt"></i>
   </div>
 
   <div class="actions">
