--- a/app/views/productos/new.html.erb
+++ b/app/views/productos/new.html.erb
@@ -1,9 +1,9 @@
-<div class="formulario">
+<div class="cuenta shadow-box">
 	
-	<h2>Registrar Producto</h2>
-
+	
+	<h2 class="center">Registrar Producto</h2>
+	
 	<%= render 'form' %>
-
-	<%= link_to 'Back', productos_path %>
-
 </div>
+
+<%= link_to 'Back', productos_path, class:"shared-link" %>
